--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,14 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+
+  overflow: hidden;
+  -ms-overflow-style: none; /* for Internet Explorer */
+  scrollbar-width: none; /* for Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Edge */
 }
 
 html {
